cmake_minimum_required(VERSION 3.23)
project(408)

set(CMAKE_CXX_STANDARD 11)

add_executable(
        408 main.cpp
        2-线性表/线性表的顺序表示/important/03.h
        2-线性表/线性表的顺序表示/01.h 2-线性表/SqList.h 2-线性表/线性表的顺序表示/02.h 2-线性表/线性表的顺序表示/03.h 2-线性表/线性表的顺序表示/04.h 2-线性表/线性表的顺序表示/05.h 2-线性表/线性表的顺序表示/06.h 2-线性表/线性表的顺序表示/07.h 2-线性表/线性表的顺序表示/08.h 2-线性表/线性表的顺序表示/09.h 2-线性表/线性表的顺序表示/10.h)
